==> osu-bsli/irec/flight-software/main/sensors/bm1422.cpp <==
/*
 * fc_bm1422.c
 *
 *  Created on: Jan 22, 2025
 *      Author: bsli
 */

#include "bm1422.h"
#include <stdio.h>
#include <HardwareSerial.h>
#include <Wire.h>

/*
 * Header files are for sharing things that other C files need.
 * Register addresses should go HERE and not bm1422.h because other C files do not need to see them.
 */

/* I2C constants (Pg. 10) */
#define I2C_ADDRESS 0x0Eu // There is a low and high address
#define WHO_AM_I 0x41

// Register constants (pg. 10)
#define REGISTER_INFO 0x0D // LSB
#define REGISTER_WIA 0x0F
#define REGISTER_DATAX 0x10 // LSB
#define REGISTER_DATAY 0x12 // LSB
#define REGISTER_DATAZ 0x14 // LSB
#define REGISTER_STA1 0x18
#define REGISTER_CNTL1 0x1B
#define REGISTER_CNTL2 0x1C
#define REGISTER_CNTL3 0x1D
#define REGISTER_AVE_A 0x40
#define REGISTER_CNTL4_L 0x5C
#define REGISTER_CNTL4_H 0x5D
#define REGISTER_TEMP 0x60 // LSB
#define REGISTER_OFF_X 0x6C
#define REGISTER_OFF_Y 0x72
#define REGISTER_OFF_Z 0x78
#define REGISTER_FINEOUTPUTX 0x90 // LSB
#define REGISTER_FINEOUTPUTY 0x92 // LSB
#define REGISTER_FINEOUTPUTZ 0x94 // LSB
#define REGISTER_GAIN_PARA_X 0x9C // LSB
#define REGISTER_GAIN_PARA_Y 0x9E // LSB

#define SENSOR_NAME "bm1422"

static esp_err_t read_registers(struct fc_bm1422 *device, uint8_t reg, uint8_t *data, uint8_t length)
{
	Wire.beginTransmission((uint8_t)I2C_ADDRESS);
	Wire.write(reg);
	if (Wire.endTransmission() != 0)
	{
		return ESP_FAIL;
	}

	if (Wire.requestFrom((uint8_t)I2C_ADDRESS, length) != length)
	{
		return ESP_FAIL;
	}
	Wire.readBytes(data, length);

	return ESP_OK;
}

static esp_err_t write_registers(struct fc_bm1422 *device, uint8_t reg, uint8_t *data, uint8_t length)
{
	Wire.beginTransmission((uint8_t)I2C_ADDRESS);
	Wire.write(reg);
	Wire.write(data, length);
	return Wire.endTransmission() ? ESP_FAIL : ESP_OK;
}

/*
 * Public functions.
 */

esp_err_t fc_bm1422_initialize(struct fc_bm1422 *device)
{
	device->is_in_degraded_state = false;

	/* =================================== */
	/* check that the device id is correct */
	/* =================================== */

	esp_err_t status;
	uint8_t data;

	status = read_registers(device, REGISTER_WIA, &data, 1);
	if (status != ESP_OK)
	{
		device->is_in_degraded_state = true;
		return status;
	}
	if (data != WHO_AM_I)
	{
		Serial.printf(SENSOR_NAME ": WHO_AM_I mismatch: %d\n", data);
		status = ESP_FAIL;
		device->is_in_degraded_state = true;
		return status;
	}

	// power on
	// 14-bit mode
	// ODR = 100 Hz
	// continuous sampling mode
	data = 0b11001000;
	status = write_registers(device, REGISTER_CNTL1, &data, 1);
	if (status != ESP_OK)
	{
		Serial.printf(SENSOR_NAME ": CNTL1 write failed\n");
		device->is_in_degraded_state = true;
		return status;
	}

	// write anything to CNTL4 high byte (0x5D) to set RSTB_LV=1
	data = 0x00;
	status = write_registers(device, REGISTER_CNTL4_H, &data, 1);
	if (status != ESP_OK)
	{
		Serial.printf(SENSOR_NAME ": CNTL4 write failed\n");
		device->is_in_degraded_state = true;
		return status;
	}

	// FORCE (bit 6) = 1 in CNTL3 to start measurements
	data = 0b01000000;
	status = write_registers(device, REGISTER_CNTL3, &data, 1);
	if (status != ESP_OK)
	{
		Serial.printf(SENSOR_NAME ": CNTL3 write failed\n");
		device->is_in_degraded_state = true;
		return status;
	}

	return ESP_OK;
}

esp_err_t fc_bm1422_process(struct fc_bm1422 *device, struct fc_bm1422_data *data)
{
	/* Array for six output data registers (Pg. 12) */
	uint8_t raw_data[6];

	/* Begin i2c read */
	esp_err_t status = read_registers(device, REGISTER_DATAX, raw_data, sizeof(raw_data));
	if (status != ESP_OK)
	{
		Serial.printf(SENSOR_NAME ": read failure\n");
		device->is_in_degraded_state = true;
		return status;
	}

	int16_t raw_magnetic_strength_x = (int16_t)((raw_data[1] << 8) | raw_data[0]);
	int16_t raw_magnetic_strength_y = (int16_t)((raw_data[3] << 8) | raw_data[2]);
	int16_t raw_magnetic_strength_z = (int16_t)((raw_data[5] << 8) | raw_data[4]);

	float scale = 0.042; // 0.042 microTesla / LSB

	/* Process Raw Data */
	data->magn_x = (float)raw_magnetic_strength_x * scale;
	data->magn_y = (float)raw_magnetic_strength_y * scale;
	data->magn_z = (float)raw_magnetic_strength_z * scale;

	// char buf[64];
	// snprintf(buf, 64, SENSOR_NAME ": mag x: %f\n", data->magnetic_strength_x);
	// SEGGER_RTT_WriteString(0, buf);
	// snprintf(buf, 64, SENSOR_NAME ": mag y: %f\n", data->magnetic_strength_y);
	// SEGGER_RTT_WriteString(0, buf);
	// snprintf(buf, 64, SENSOR_NAME ": mag z: %f\n", data->magnetic_strength_z);
	// SEGGER_RTT_WriteString(0, buf);

	return ESP_OK;
}
